feat(admin): change feature flags, add messages section in admin panel
